<resources>
    <string name="app_name">Calc</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonDecimal">.</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">x</string>
    <string name="buttonDivide">/</string>
    <string name="buttonClearAll">AC</string>
    <string name="buttonClear">C</string>
    <string name="buttonEquals">=</string>
    <string name="buttonUnused">"?"</string>
    <string name="resultTextInitVal">0</string>
    <string name="toolBarText">MDEV Calculator</string>



</resources>