<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7D8E3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:gravity="bottom"
        android:text="@string/resultTextInitVal"
        android:textAlignment="viewEnd"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUnused1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/buttonUnused"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonUnused2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonClearAll"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUnused2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:text="@string/buttonUnused"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonDivide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonUnused1"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/buttonDivide"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonUnused2"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClearAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onAllClearClick"
        android:text="@string/buttonClearAll"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonUnused1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button7"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClearAll" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button8"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/buttonUnused1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button9"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/buttonUnused2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/buttonMultiply"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button4"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button5"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button6"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubtract"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/buttonSubtract"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button1"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button2"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDecimal"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button3"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonClear"
        app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/buttonAdd"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/button0"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecimal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onNumberClick"
        android:text="@string/buttonDecimal"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onClearClick"
        android:text="@string/buttonClear"
        app:backgroundTint="@color/primary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEquals"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDecimal"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetLeft="1dp"
        android:insetTop="1dp"
        android:insetRight="1dp"
        android:insetBottom="1dp"
        android:onClick="onCalculateClick"
        android:text="@string/buttonEquals"
        app:backgroundTint="@color/secondary"
        app:cornerRadius="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>